--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,4 +27,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: execute py script
       run: |
-        python get-page-content.py
+        python getpage.py
