--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,8 @@ jobs:
       with:
         python-version: "3.10"
     - name: Install dependencies
-      run: |      
+      run: |
+        python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: execute py script
       run: |
