--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,5 +27,7 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: execute py script
+      env:
+          CONFLUENCE_API_TOKEN: ${{ secrets.CONFLUENCE_API_TOKEN }}
       run: |
         python getpage.py
